force-app/main/default/objects/Manufacturer_s_Items__c/Manufacturer_s_Items__c.object-meta.xml
<CustomObject>
    <label>Manufacturer&apos;s Item</label>
    <nameField>
        <displayFormat>MI - {0}</displayFormat>
        <label>Manufacturer&apos;s Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturer&apos;s Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>