force-app/main/default/objects/Manufacturer_s_Items__c/fields/Concatenated_Data__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Data__c</fullName>
    <formula>Manufacturer_Name__c + &apos; &apos; + Product_Name__c + &apos; &apos; + Product_Description__c + &apos; &apos; + Color__c + &apos; &apos; + Pattern__c + &apos; &apos; + Product_Description_2__c</formula>
    <label>Concatenated Data</label>
    <type>Text</type>
</CustomField>