force-app/main/default/objects/Manufacturer_s_Items__c/fields/Dancik_Item__c.field-meta.xml
<CustomField>
    <fullName>Dancik_Item__c</fullName>
    <formula>Product__r.Dancik_Item__c</formula>
    <label>Dancik Item</label>
    <type>Text</type>
</CustomField>