force-app/main/default/objects/Manufacturer_s_Items__c/fields/IsActiveProduct__c.field-meta.xml
<CustomField>
    <fullName>IsActiveProduct__c</fullName>
    <formula>Product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActiveProduct</label>
    <type>Checkbox</type>
</CustomField>