force-app/main/default/objects/Manufacturer_s_Items__c/fields/Item_Class_2__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_2__c</fullName>
    <description>We had to create this field for display library</description>
    <formula>Product__r.Item_Class_2__c</formula>
    <label>Item Class 2</label>
    <type>Text</type>
</CustomField>