force-app/main/default/objects/Manufacturer_s_Items__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Manufacturer&apos;s Item</relationshipLabel>
    <relationshipName>Manufacturer_s_Item</relationshipName>
    <type>Lookup</type>
</CustomField>