force-app/main/default/objects/Manufacturer_s_Items__c/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <formula>Manufacturer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Name</label>
    <type>Text</type>
</CustomField>