force-app/main/default/objects/Manufacturer_s_Items__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <formula>Product__r.Pattern__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pattern</label>
    <type>Text</type>
</CustomField>