force-app/main/default/objects/Manufacturer_s_Items__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Manufacturer&apos;s Item</relationshipLabel>
    <relationshipName>Manufacturer_s_Item</relationshipName>
    <type>Lookup</type>
</CustomField>