force-app/main/default/objects/Manufacturer_s_Items__c/fields/Product_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_2__c</fullName>
    <formula>Product__r.Product_Description_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description 2</label>
    <type>Text</type>
</CustomField>